# ise

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CITATION.md  CONTRIBUTING.md  ISMIP7_AIS_multigrid_generator_nc.ipynb  LICENSE.md  Makefile  README.md  README.rst  atmospheric_df.csv  checkpoint_AIS_temponly_regions  compute_ivaf_minus_control.py  config.yaml  del.py  environment.yml  extract_climatologies.py  generate_CDO_files_nc.py  main.ipynb  main.py  master_head.csv  oceanic_df.csv  plots.py  polar_stereo.py  preds.csv  process_atmosphere.py  pyproject.toml  r.txt  readme.md  regrid.ipynb  remap.ipynb  remap.py  requirements.txt  run.py  run_gp.py  sbatch_queue.py  (+9 more)
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
ISEFlow_AIS_v1-1-0/: deep_ensemble.pth  deep_ensemble_metadata.json  normalizing_flow.pth
ISEFlow_AIS_v1-1-0/ensemble_members/: member_10.pth  member_2.pth  member_3.pth  member_5.pth  member_6.pth  member_8.pth  member_9.pth
docs/: README.md  api.rst  conf.py  index.rst  quickstart.rst  readthedocs.requirements.txt
docs/doctrees/: api.doctree  environment.pickle  index.doctree  quickstart.doctree
docs/html/: .buildinfo  api.html  genindex.html  index.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js
docs/ise/: make.py
docs/source/: conf.py  index.rst  ise.models.gp.rst  ise.models.rst  ise.models.testing.rst  ise.models.timeseries.rst  ise.models.traditional.rst  ise.pipelines.rst  ise.utils.rst  ise.visualization.rst  modules.rst  usage.rst
examples/: ISEFlow_from_NC.py  ISEFlow_inference.py  ISEFlow_predict.py  ISEFlow_predict_dataset.py  analyze_model.py  example_absolute_forcings.py  example_ais.py  example_gris.py  example_raw_values.py  gp.py  hybrid_emulator_demo.ipynb  process_training_data.py  run.py
examples/grids/: process.py
examples/sectors/: analyze_model.py  gp.py  run.py
experiments/: get_ismip.py  plots.py  run_experiment.py  simulation.py  single_experiment.py
ise/: __init__.py
ise/data/: EmulatorData.py  _EmulatorData.py  __init__.py  anomaly.py  dataclasses.py  feature_engineer.py  forcings.py  grids.py  inputs.py  process.py  scaler.py  utils.py
ise/evaluation/: __init__.py  _tests.py  metrics.py  plots.py
ise/grids/: __init__.py  utils.py
ise/models/: ISEFlow copy.py  ISEFlow.py  __init__.py  deep_ensemble.py  experiments.py  gp.py  grid.py  hybrid.py  iseflow.py  loss.py  lstm.py  normalizing_flow.py  scenario.py  sector.py  train.py  training.py  variational_lstm_emulator.py
ise/pipelines/: __init__.py  feature_engineering.py  processing.py  testing.py  training.py
ise/sectors/: __init__.py
ise/utils/: AIS_model_characteristics.csv  GrIS_model_characteristics.csv  __init__.py  data.py  functions.py  io.py  ismip6_experiments_updated.csv  models.py  training.py  utils.py
ise/visualization/: Plotter.py  __init__.py  ensemble.py  testing.py
manuscripts/A variational LSTM emulator/: Manuscript Plots.ipynb  README.md  README.txt
manuscripts/ISEFlow/: iseflow-ais-predictions.csv
model/AIS/: combine_processed.py  get_best_nf.py  greedy_select_ensemble.py  optuna_optim.py  predict.py  save_iseflow.py  train_ensemble_members.py  train_nf.py
model/GrIS/: get_best_nf.py  greedy_select_ensemble.py  optuna_optim.py  predict.py  save_iseflow.py  train_ensemble_members.py  train_nf.py
old_logs/Nov07_18-14-26_login005 -- 07-11-2022 18.14.26, FC=6, Nodes=[256, 128, 64, 32, 16, 1], batch_size=200, criterion=MSELoss(), epochs=200/: events.out.tfevents.1667862876.login005.101405.0
old_logs/Nov07_18-43-52_login005 -- 07-11-2022 18.43.52, FC=6, Nodes=[256, 128, 64, 32, 16, 1], batch_size=200, criterion=MSELoss(), epochs=200/: events.out.tfevents.1667864638.login005.127683.0
old_logs/Nov16_12-30-51_gpu1202.oscar.ccv.brown.edu -- 16-11-2022 12.30.51, FC=6, nodes=[256, 128, 64, 32, 16, 1], batch_size=100,/: events.out.tfevents.1668619852.gpu1202.oscar.ccv.brown.edu.176679.0
old_logs/Nov16_12-55-15_gpu1202.oscar.ccv.brown.edu -- 16-11-2022 12.55.15, dataset=all_columns,/: events.out.tfevents.1668621317.gpu1202.oscar.ccv.brown.edu.182402.0
old_logs/Nov16_13-07-07_gpu1202.oscar.ccv.brown.edu -- 16-11-2022 13.07.07, dataset=dataset1,/: events.out.tfevents.1668622027.gpu1202.oscar.ccv.brown.edu.182402.2
old_logs/Nov16_13-21-54_gpu1202.oscar.ccv.brown.edu -- 16-11-2022 13.21.54, dataset=dataset2,/: events.out.tfevents.1668622914.gpu1202.oscar.ccv.brown.edu.182402.4
old_logs/Nov16_13-36-48_gpu1202.oscar.ccv.brown.edu -- 16-11-2022 13.36.48, dataset=dataset3,/: events.out.tfevents.1668623808.gpu1202.oscar.ccv.brown.edu.182402.6
old_logs/Nov16_13-51-24_gpu1202.oscar.ccv.brown.edu -- 16-11-2022 13.51.24, dataset=dataset4,/: events.out.tfevents.1668624684.gpu1202.oscar.ccv.brown.edu.182402.8
old_logs/Nov16_14-02-58_gpu1202.oscar.ccv.brown.edu -- 16-11-2022 14.02.58, dataset=all_columns,/: events.out.tfevents.1668625378.gpu1202.oscar.ccv.brown.edu.182402.10
old_logs/Nov16_14-12-50_gpu1202.oscar.ccv.brown.edu -- 16-11-2022 14.12.50, dataset=all_columns,/: events.out.tfevents.1668625972.gpu1202.oscar.ccv.brown.edu.200799.0
old_logs/Nov16_14-24-42_gpu1202.oscar.ccv.brown.edu -- 16-11-2022 14.24.42, dataset=dataset1,/: events.out.tfevents.1668626682.gpu1202.oscar.ccv.brown.edu.200799.2
old_logs/Nov16_14-39-32_gpu1202.oscar.ccv.brown.edu -- 16-11-2022 14.39.32, dataset=dataset2,/: events.out.tfevents.1668627572.gpu1202.oscar.ccv.brown.edu.200799.4
old_logs/Nov16_14-54-30_gpu1202.oscar.ccv.brown.edu -- 16-11-2022 14.54.30, dataset=dataset3,/: events.out.tfevents.1668628470.gpu1202.oscar.ccv.brown.edu.200799.6
source/: ise.data.processors.rst
src/: config.yaml  execution_logs.txt  main.py  pawtucket_trunk_or_treat_logs.txt  utils.py
tests/: conftest.py  paths.py  test_forcing_data.py  test_grid_data.py  test_initial_data.py  test_output_data.py  test_processed_data.py  test_raw_data.py  test_results_dataset.py
(+914 files in other folders)
