[tool.poetry]
name = "ise"
version = "0.1.0"
description = "Package for creating ice sheet emulators predicting future sea level rise"
authors = ["Peter Van Katwyk <pvankatwyk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.3.0"
nflows = "^0.14"
matplotlib = "^3.8.4"
numpy = "^1.26.4"
pandas = "^2.2.2"
shap = "^0.45.1"
scikit-learn = "^1.4.2"
xarray = "^2024.5.0"
netcdf4 = "^1.6.5"
cftime = "^1.6.3"
tqdm = "^4.66.4"
seaborn = "^0.13.2"
tensorboard = "^2.16.2"
pdoc = "^14.4.0"
properscoring = "^0.1"


[tool.poetry.group.dev.dependencies]
imbalanced-learn = "^0.12.2"
ctgan = { version = "^0.10.1", python = ">=3.8,<3.13" }
optuna = "^3.6.1"
statsmodels = "^0.14.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
