[project]
name = "ise"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "absl-py==2.1.0 ; python_full_version >= '3.9' and python_full_version < '4.0'",
    "cartopy>=0.24.1",
    "certifi==2024.8.30 ; python_full_version >= '3.9' and python_full_version < '4.0'",
    "cftime==1.6.4 ; python_full_version >= '3.9' and python_full_version < '4.0'",
    "clisops>=0.15.0",
    "cloudpickle==3.1.0 ; python_full_version >= '3.9' and python_full_version < '4.0'",
    "colorama==0.4.6 ; python_full_version >= '3.9' and python_full_version < '4.0' and sys_platform == 'win32'",
    "contourpy==1.3.0 ; python_full_version >= '3.9' and python_full_version < '4.0'",
    "cycler==0.12.1 ; python_full_version >= '3.9' and python_full_version < '4.0'",
    "filelock==3.16.1 ; python_full_version >= '3.9' and python_full_version < '4.0'",
    "fonttools==4.54.1 ; python_full_version >= '3.9' and python_full_version < '4.0'",
    "fsspec==2024.10.0 ; python_full_version >= '3.9' and python_full_version < '4.0'",
    "geopandas>=1.0.1",
    "grpcio==1.67.0 ; python_full_version >= '3.9' and python_full_version < '4.0'",
    "importlib-metadata==8.5.0 ; python_full_version == '3.9.*'",
    "importlib-resources==6.4.5 ; python_full_version == '3.9.*'",
    "ipykernel>=6.29.5",
    "jinja2==3.1.4 ; python_full_version >= '3.9' and python_full_version < '4.0'",
    "joblib==1.4.2 ; python_full_version >= '3.9' and python_full_version < '4.0'",
    "kiwisolver==1.4.7 ; python_full_version >= '3.9' and python_full_version < '4.0'",
    "llvmlite==0.43.0 ; python_full_version >= '3.9' and python_full_version < '4.0'",
    "markdown==3.7 ; python_full_version >= '3.9' and python_full_version < '4.0'",
    "markupsafe==3.0.2 ; python_full_version >= '3.9' and python_full_version < '4.0'",
    "matplotlib==3.9.2 ; python_full_version >= '3.9' and python_full_version < '4.0'",
    "mpmath==1.3.0 ; python_full_version >= '3.9' and python_full_version < '4.0'",
    "netcdf4==1.7.1.post2 ; python_full_version >= '3.9' and python_full_version < '4.0'",
    "networkx==3.2.1 ; python_full_version >= '3.9' and python_full_version < '4.0'",
    "nflows==0.14 ; python_full_version >= '3.9' and python_full_version < '4.0'",
    "numba==0.60.0 ; python_full_version >= '3.9' and python_full_version < '4.0'",
    "numpy==1.26.4 ; python_full_version >= '3.9' and python_full_version < '4.0'",
    "nvidia-cublas-cu12==12.4.5.8 ; python_full_version >= '3.9' and python_full_version < '4.0' and platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cuda-cupti-cu12==12.4.127 ; python_full_version >= '3.9' and python_full_version < '4.0' and platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cuda-nvrtc-cu12==12.4.127 ; python_full_version >= '3.9' and python_full_version < '4.0' and platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cuda-runtime-cu12==12.4.127 ; python_full_version >= '3.9' and python_full_version < '4.0' and platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cudnn-cu12==9.1.0.70 ; python_full_version >= '3.9' and python_full_version < '4.0' and platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cufft-cu12==11.2.1.3 ; python_full_version >= '3.9' and python_full_version < '4.0' and platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-curand-cu12==10.3.5.147 ; python_full_version >= '3.9' and python_full_version < '4.0' and platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cusolver-cu12==11.6.1.9 ; python_full_version >= '3.9' and python_full_version < '4.0' and platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cusparse-cu12==12.3.1.170 ; python_full_version >= '3.9' and python_full_version < '4.0' and platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-nccl-cu12==2.21.5 ; python_full_version >= '3.9' and python_full_version < '4.0' and platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-nvjitlink-cu12==12.4.127 ; python_full_version >= '3.9' and python_full_version < '4.0' and platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-nvtx-cu12==12.4.127 ; python_full_version >= '3.9' and python_full_version < '4.0' and platform_machine == 'x86_64' and sys_platform == 'linux'",
    "owslib>=0.32.1",
    "packaging==24.1 ; python_full_version >= '3.9' and python_full_version < '4.0'",
    "pandas==2.2.3 ; python_full_version >= '3.9' and python_full_version < '4.0'",
    "pdoc==14.7.0 ; python_full_version >= '3.9' and python_full_version < '4.0'",
    "pillow==11.0.0 ; python_full_version >= '3.9' and python_full_version < '4.0'",
    "properscoring==0.1 ; python_full_version >= '3.9' and python_full_version < '4.0'",
    "protobuf==5.28.2 ; python_full_version >= '3.9' and python_full_version < '4.0'",
    "pygments==2.18.0 ; python_full_version >= '3.9' and python_full_version < '4.0'",
    "pyparsing==3.2.0 ; python_full_version >= '3.9' and python_full_version < '4.0'",
    "pyproj>=3.7.1",
    "pytest>=8.3.4",
    "python-dateutil==2.9.0.post0 ; python_full_version >= '3.9' and python_full_version < '4.0'",
    "pytz==2024.2 ; python_full_version >= '3.9' and python_full_version < '4.0'",
    "scikit-learn==1.5.2 ; python_full_version >= '3.9' and python_full_version < '4.0'",
    "scipy==1.13.1 ; python_full_version >= '3.9' and python_full_version < '4.0'",
    "seaborn>=0.13.2",
    "seaborn==0.13.2 ; python_full_version >= '3.9' and python_full_version < '4.0'",
    "setuptools==75.2.0 ; python_full_version >= '3.9' and python_full_version < '4.0'",
    "shap==0.45.1 ; python_full_version >= '3.9' and python_full_version < '4.0'",
    "six==1.16.0 ; python_full_version >= '3.9' and python_full_version < '4.0'",
    "slicer==0.0.8 ; python_full_version >= '3.9' and python_full_version < '4.0'",
    "sphinx>=8.2.1",
    "sphinx-autobuild>=2024.10.3",
    "sphinx-rtd-theme>=3.0.2",
    "sympy==1.13.1 ; python_full_version >= '3.9' and python_full_version < '4.0'",
    "tensorboard==2.18.0 ; python_full_version >= '3.9' and python_full_version < '4.0'",
    "tensorboard-data-server==0.7.2 ; python_full_version >= '3.9' and python_full_version < '4.0'",
    "threadpoolctl==3.5.0 ; python_full_version >= '3.9' and python_full_version < '4.0'",
    "torch==2.5.0 ; python_full_version >= '3.9' and python_full_version < '4.0'",
    "tqdm==4.66.5 ; python_full_version >= '3.9' and python_full_version < '4.0'",
    "triton==3.1.0 ; python_full_version >= '3.9' and python_full_version < '3.13' and platform_machine == 'x86_64' and sys_platform == 'linux'",
    "typing-extensions==4.12.2 ; python_full_version >= '3.9' and python_full_version < '4.0'",
    "tzdata==2024.2 ; python_full_version >= '3.9' and python_full_version < '4.0'",
    "werkzeug==3.0.4 ; python_full_version >= '3.9' and python_full_version < '4.0'",
    "xarray==2024.7.0 ; python_full_version >= '3.9' and python_full_version < '4.0'",
    "xesmf>=0.8.8",
    "zipp==3.20.2 ; python_full_version == '3.9.*'",
    "torchvision>=0.20.0",
    "transformers>=4.49.0",
    "plotly>=6.3.0",
    "nbformat>=5.10.4",
    "wandb>=0.21.1",
    "optuna>=4.5.0",
]
