[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ise-py"
version = "1.0.0"
description = "ISE (Ice Sheet Emulator) — ISEFlow, a flow-based neural network emulator for sea level projections with uncertainty quantification."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE.md" }
authors = [
  { name = "Peter Van Katwyk", email = "pvankatwyk@gmail.com" },
]
keywords = [
  "ice sheet emulator",
  "sea level projections",
  "uncertainty quantification",
  "normalizing flow",
  "deep learning",
  "climate science",
  "ISMIP6",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Atmospheric Science",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  "torch>=2.0",
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.4",
  "scipy>=1.10",
  "xarray>=2023.0",
  "nflows>=0.14",
  "netcdf4>=1.6",
  "cftime>=1.6",
  "matplotlib>=3.7",
  "seaborn>=0.13",
  "cartopy>=0.22",
  "geopandas>=0.14",
  "pyproj>=3.5",
  "xesmf>=0.7",
  "clisops>=0.12",
  "owslib>=0.28",
  "properscoring>=0.1",
  "shap>=0.44",
  "tqdm>=4.60",
  "huggingface_hub>=0.20",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.4",
  "mypy>=1.8",
  "wandb>=0.17",
  "optuna>=3.6",
  "statsmodels>=0.14",
  "tensorboard>=2.16",
  "ipykernel>=6.29",
  "nbformat>=5.10",
  "pre-commit>=3.7",
]
docs = [
  "sphinx>=8.0",
  "sphinx-autobuild>=2024.0",
  "sphinx-rtd-theme>=3.0",
]
gpu = [
  "nvidia-cublas-cu12",
  "nvidia-cuda-cupti-cu12",
  "nvidia-cuda-nvrtc-cu12",
  "nvidia-cuda-runtime-cu12",
  "nvidia-cudnn-cu12",
  "nvidia-cufft-cu12",
  "nvidia-curand-cu12",
  "nvidia-cusolver-cu12",
  "nvidia-cusparse-cu12",
  "nvidia-nccl-cu12",
  "nvidia-nvjitlink-cu12",
  "nvidia-nvtx-cu12",
]

[project.urls]
Homepage = "https://github.com/Brown-SciML/ise"
Documentation = "https://ise.readthedocs.io"
Repository = "https://github.com/Brown-SciML/ise"
"Bug Tracker" = "https://github.com/Brown-SciML/ise/issues"
"HuggingFace Hub" = "https://huggingface.co/Brown-SciML/ISEFlow"

[tool.hatch.build.targets.wheel]
packages = ["ise"]
include = ["ise/data/data_files/**"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP"]
ignore = ["E203", "E402", "E501", "E722", "F841",]
exclude = [
  ".git",
  "__pycache__",
  "docs/",
  "ise/models/_experimental/",
  "build/",
  "dist/",
  ".venv/",
  "venv/",
  "manuscripts/*",
]

[tool.ruff.lint.isort]
known-first-party = ["ise"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_return_any = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "gpu: marks tests that require a CUDA GPU (deselect with '-m \"not gpu\"')",
]

[tool.coverage.run]
source = ["ise"]
omit = ["ise/models/_experimental/*", "ise/models/pretrained/*"]

[dependency-groups]
dev = [
    "build>=1.5.0",
    "ruff>=0.15.12",
    "twine>=6.2.0",
]
